 * removing links to http://www.opsi.org/credits/
 * osinteractivegui: set copyright tro 1995-2021
 * Fixes detection of w10 release > 2009 (21h1) (osparser) ; fixes #4665
 * New cli parameter /ServiceBatch  if /serviceBatch then also needed:
          /ClientId <> /opsiservice <> /username <> /password <> /productId <> and <script path>

-- d.oertel <d.oertel@uib.de> Tue, 08 June 2021 15:00

opsi-script (4.12.4.22) stable; urgency=low

 * new (common) unit osfilehelper
 * osfunc: function makbakfile with two parameters (name,maxbak number) is moved as makbakfiles
   to osfilehelper
 * oslog: function makbakfile with two parameters (name,maxbak number) is moved as makbakfiles
   to osfilehelper
 * osfunc files section copy: moving some log messages from Loglevel 6 to 7

-- d.oertel <d.oertel@uib.de> Fri, 04 June 2021 15:00


opsi-script (4.12.4.21) stable; urgency=low

 * osfunc: function isSymLink(const filepath : string) : boolean;
 * osfuncunix: function resolveUnixSymlink(const filepath : string; recursive : boolean = true) : string;
 * osparser: function resolveWinSymlink(const filepath : string; recursive : boolean = true) : string;
 * new function resolveSymlink(<string>) : string; on error it returns input
 * new constant %realScriptpath% ; if the script is called via symlink
      then it is the resolved version of %scriptpath%
 * new common unit osfuncunix
 * new function forcePathDelims(<path string>) : <path string>
      sets all slash and backslash as pathdelim according to the OS
 * new boolean fileIsSymlink(FilePath: string): boolean;

-- d.oertel <d.oertel@uib.de> Tue, 25 May 2021 15:00

opsi-winst/opsi-script (4.12.4.20) stable; urgency=low

 * again: fix debug_lib do imported libs added to nologfiles in oslog

-- d.oertel <d.oertel@uib.de> Thu, 6 May 2021 15:00

opsi-winst/opsi-script (4.12.4.19) stable; urgency=low

 * osparser: fix fileexists, fileOrFolderExists, DirectoryExists with quoted filenames
