@@ -29,6 +29,9 @@ opsi-script (4.12.4.23) stable; urgency=low
  * Fixes detection of w10 release > 2009 (21h1) (osparser) ; fixes #4665
  * New cli parameter /ServiceBatch  if /serviceBatch then also needed:
           /ClientId <> /opsiservice <> /username <> /password <> /productId <> and <script path>
+* New config opsi-script.global.supressSystemEncodingWarning
+     if true then the following warning will be suppressed:
+     'Encoding=system makes the opsiscript not portable between different OS'
 
 -- d.oertel <d.oertel@uib.de> Tue, 08 June 2021 15:00
 
